[iOS][Signin] Fixing DCHECK failure in Other Devices tab

Other Devices can call -[SigninPromoViewMediator signinPromoViewHidden]
while the sign-in promo view has never been visible before.
-[SigninPromoViewMediator signinPromoViewHidden] should do nothing if
-[SigninPromoViewMediator signinPromoViewVisible] has not been called
before.

Bug: 795762
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I814b3f9c849029ad2eeb72a5c25c544ffa945fc7
Reviewed-on: https://chromium-review.googlesource.com/832527
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Reviewed-by: edchin <edchin@chromium.org>
Commit-Queue: Jérôme Lebel <jlebel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#525025}
Former-commit-id: 20e3cf9d29c9abdddea9bd1519c4c9043127c6dc